# xdrgen

./: .gitignore  CLAUDE.md  FIXTURES.md  README.md  fetcher.py  main.py  model_codegen.py  parser.py  profile.example.yaml  pyproject.toml  world.py  xdrgen.example.yaml
docker/: docker-compose-kafka.yml  docker-compose-kustainer.yml
generators/: PRODUCTION_LIKE_DATA.md  __init__.py  base.py  cloud_app_events.py  common.py  device_common.py  device_events.py  device_file_certificate_info.py  device_file_events.py  device_image_load_events.py  device_logon_events.py  device_network_events.py  device_network_info.py  device_process_events.py  device_registry_events.py  email_attachment_info.py  email_corpus.py  email_events.py  email_pool.py  email_post_delivery_events.py  email_url_info.py  entra_id_sign_in_events.py  entra_id_spn_sign_in_events.py  graph_api_audit_events.py  identity_account_info.py  identity_directory_events.py  identity_events.py  identity_logon_events.py  identity_query_events.py  url_click_events.py
models/: __init__.py  agents_info.py  ai_agents_info.py  behavior_entities.py  behavior_info.py  campaign_info.py  cloud_app_events.py  cloud_audit_events.py  cloud_dns_events.py  cloud_policy_enforcement_events.py  cloud_process_events.py  cloud_storage_aggregated_events.py  data_security_behaviors.py  data_security_events.py  device_app_crash.py  device_app_launch.py  device_baseline_compliance_assessment.py  device_baseline_compliance_assessment_kb.py  device_baseline_compliance_profiles.py  device_behavior_entities.py  device_behavior_info.py  (+58 more)
(+39 files in other folders)
